tests/errors/type_check/error_span/structured_array_index_out_of_bounds.sim

            fn f() {
              a: [i64; 2];
              x: i64;
              entry:
                a = [1i64, 2i64];
                x = copy a[2i64];
                return
            }