tests/errors/type_check/error_span/structured_array_index_out_of_bounds.err.expected
error: at 7:17: [TC-ArrayIndexOutOfBounds] In function 'f', block 'entry': Array index 2 out of bounds for [_; 2]
   |
 7 |                 x = copy a[2i64];
   |                 ^^^^^^^^^^^^^^^^
